--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "twilio": "^2.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
