--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "qs": "^6.2.1",
     "request": "^2.75.0",
     "serve-favicon": "~2.3.0",
-    "twilio": "^2.11.0"
+    "twilio": "^2.11.0",
+    "twit": "^2.2.5"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
